--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,30 @@
     padding: 0;
 }
 
-@keyframes fadeOut {
+/* html,
+body {
+    min-height: 100%;
+}
+
+body {
+    height: 100vh;
+} */
+
+@keyframes overlayFadeOut {
     0% {
         opacity: 1;
     }
     100% {
         opacity: 0;
+    }
+}
+
+@keyframes overlayFadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
     }
 }
 
@@ -33,23 +51,54 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    animation: fadeOut 2s;
-    animation-delay: 2s;
+    animation: overlayFadeOut 1.5s;
+    animation-delay: 1.5s;
     animation-fill-mode: forwards;
 }
 
 #overlay-img {
-    animation: fadeIn 3s;
+    animation: overlayFadeIn 1.5s;
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: stretch;
+    /* margin: 0 auto; */
+    height: 100%;
+    width: 100%;
+}
+
+.header h1 {
+    font:
+        normal 300 4.6rem "CormorantGaramond",
+        serif;
+    text-transform: uppercase;
+    margin-top: 1.6rem;
+    max-width: 500px;
+}
+
+.header h2 {
+    font:
+        normal 300 2.3rem "CormorantGaramond",
+        serif;
+    text-transform: uppercase;
+    max-width: 500px;
 }
 
 .navbar {
     display: flex;
-    border-bottom: 1px solid rgb(211, 187, 170);
-    height: 60px;
+    flex-direction: column;
+    align-items: center;
+    vertical-align: baseline;
+    border-right: 1px solid rgb(211, 187, 170);
+    height: 96vh;
+    width: 7rem;
 }
 
 .navbar h1 {
-    font-size: 2rem;
+    font-size: 3rem;
+    font-family: "CormorantGaramond", serif;
     font-weight: bold;
 }
 
@@ -58,10 +107,148 @@
 }
 
 body {
-    font-family: "Poppins", sans-serif;
-    font-size: 16px;
+    font-family: "Raleway", sans-serif;
+    font-size: 1.4rem;
+    font-weight: 400;
     line-height: 1.5;
     color: rgb(30, 30, 30);
     background: #fff;
     padding: 20px;
+}
+
+.main-page {
+}
+
+.headline-container {
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 4rem;
+    padding-top: 20rem;
+    min-height: 100%;
+    width: 50%;
+}
+
+.headline-container h1 {
+    font:
+        normal 100 4.6rem "CormorantGaramond",
+        serif;
+    text-transform: uppercase;
+    margin-top: 1.4rem;
+    max-width: 500px;
+}
+
+.headline-container p {
+    margin-top: 1.4rem;
+    max-width: 500px;
+}
+
+.headline-subtitle {
+    display: block;
+    font:
+        italic 100 1.6rem "CormorantGaramond",
+        serif;
+    color: #c69681;
+    background: -moz-linear-gradient(
+        135deg,
+        #c69681 0%,
+        #dbbead 30%,
+        #efab92 70%,
+        #c69681 100%
+    );
+    background: -o-linear-gradient(
+        135deg,
+        #c69681 0%,
+        #dbbead 30%,
+        #efab92 70%,
+        #c69681 100%
+    );
+    background: linear-gradient(
+        -45deg,
+        #c69681 0%,
+        #dbbead 30%,
+        #efab92 70%,
+        #c69681 100%
+    );
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    /* padding-top: 0.5rem; */
+    padding-left: 0.2rem;
+    max-width: 600px;
+    border-top: 1px solid rgb(211, 187, 170);
+}
+
+.headline-text {
+    padding-left: 0.2rem;
+    margin-top: 1.8rem;
+    max-width: 600px;
+    font-size: 1.2rem;
+}
+
+.subscribe-form {
+    margin-top: 1.4rem;
+    max-width: 600px;
+    font-size: 1.4rem;
+}
+
+.subscribe-form input {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    padding: 1.2rem 0.3rem;
+    width: 100%;
+    max-width: 600px;
+    font-size: 1.4rem;
+    font-weight: 100;
+    border: none;
+    border-bottom: 1px solid #999999;
+}
+
+.subscribe-form button {
+    margin-top: 1.6rem;
+    padding: 1.6rem 2.8rem 1.5rem 2.8rem;
+    background-color: transparent;
+    color: #212121;
+    border: 1px solid rgb(211, 187, 170);
+}
+
+.subscribe-form button:hover {
+    background-color: rgb(211, 187, 170);
+}
+
+.countdown-container {
+    display: inline-flex;
+    position: relative;
+    justify-content: center;
+    /* justify-content: space-between; */
+    min-height: 100%;
+    width: 50%;
+    overflow: hidden;
+}
+
+.countdown-container video {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+    overflow: hidden;
+}
+
+.countdown-container .countdown-content {
+    text-align: center;
+    padding-top: 24rem;
+    max-width: 600px;
+    font-size: 1.4rem;
+    color: #fff;
+}
+
+.countdown-section {
+    padding-left: 4rem;
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+}
+
+.countdown-row span {
+    padding-right: 1.5em;
 }
