--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,10 @@ body {
     height: 100vh;
 } */
 
+body {
+    padding-left: 0;
+}
+
 @keyframes overlayFadeOut {
     0% {
         opacity: 1;
@@ -97,13 +101,14 @@ body {
 }
 
 .navbar h1 {
-    font-size: 3rem;
+    color: rgb(211, 187, 170);
+    font-size: 3.5rem;
     font-family: "CormorantGaramond", serif;
     font-weight: bold;
 }
 
 .navbar h1:hover {
-    color: rgb(211, 187, 170);
+    color: #212121;
 }
 
 body {
@@ -184,13 +189,13 @@ body {
     font-size: 1.2rem;
 }
 
-.subscribe-form {
+#subscribe-form {
     margin-top: 1.4rem;
     max-width: 600px;
     font-size: 1.4rem;
 }
 
-.subscribe-form input {
+#subscribe-form input {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
@@ -203,7 +208,8 @@ body {
     border-bottom: 1px solid #999999;
 }
 
-.subscribe-form button {
+#subscribe-form button {
+    font-size: 1rem;
     margin-top: 1.6rem;
     padding: 1.6rem 2.8rem 1.5rem 2.8rem;
     background-color: transparent;
@@ -211,7 +217,7 @@ body {
     border: 1px solid rgb(211, 187, 170);
 }
 
-.subscribe-form button:hover {
+#subscribe-form button:hover {
     background-color: rgb(211, 187, 170);
 }
 
@@ -236,19 +242,45 @@ body {
 
 .countdown-container .countdown-content {
     text-align: center;
-    padding-top: 24rem;
+    padding-top: 28rem;
     max-width: 600px;
     font-size: 1.4rem;
     color: #fff;
 }
 
-.countdown-section {
-    padding-left: 4rem;
+.timer {
+    padding-top: 1em;
+}
+
+.timer span {
+    text-align: center;
+    padding: 0 0.5em;
+    font:
+        normal 300 4rem "CormorantGaramond",
+        serif;
+}
+
+.timer-labels {
+    text-align: center;
+    padding-left: 0.7em;
     display: flex;
     flex-wrap: nowrap;
     align-items: center;
 }
 
-.countdown-row span {
-    padding-right: 1.5em;
+.timer-labels span {
+    padding: 0 1.25em;
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+}
+
+#subscribed {
+    font-weight: bold;
+    font-size: 1rem;
+}
+
+#subscribed-text {
+    font-size: 1rem;
+    color: rgb(211, 187, 170);
 }
